tried to fix the white bar on mobile applications

--- a/styleSheets/about.css
+++ b/styleSheets/about.css
@@ -112,6 +112,7 @@ body {
   * {
     box-sizing: border-box;
     margin: 0;
+    height: 100%;
   }
 
   #navbarBrandColoring {
