--- a/styleSheets/mainstyle.css
+++ b/styleSheets/mainstyle.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  height: 100%;
 }
 
 body {
