--- a/styleSheets/support.css
+++ b/styleSheets/support.css
@@ -107,6 +107,7 @@ body {
   * {
     box-sizing: border-box;
     margin: 0;
+    height: 100%;
   }
 
   #navbarBrandColoring {
